<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Client</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="user_profile_image">user profile image</string>
    <string name="compose_tweet">Compose</string>
    <string name="cancel">Cancel</string>
    <string name="tweet">Tweet</string>
    <string name="compose_tweet_hint">What\'s happening?</string>
    <string name="network_not_available">Sorry, unable to connect to the network.</string>
    <string name="profile">Profile</string>
    <string name="followers">followers</string>
    <string name="following">following</string>

</resources>