<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivCancel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/cancel"
        android:src="@drawable/ic_cancel" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/ivProfileImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/user_profile_image"
        android:background="#43a1fe" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etTweet"
        android:layout_below="@+id/ivCancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/compose_tweet_hint"
        android:background="@android:color/transparent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="top"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet"
        android:id="@+id/btnTweet"
        android:layout_below="@+id/etTweet"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#4054b2"
        android:textColor="#ffffff"
        android:textAllCaps="false"
        android:textSize="18sp" />


</RelativeLayout>