<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.kannegiesser.twitterclient.activities.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userProfileHeader"
        android:padding="10dp"
        android:background="@android:color/white">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/ivProfileImage"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/user_profile_image"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvName"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:layout_alignParentTop="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvScreenName"
            android:layout_below="@+id/tvName"
            android:layout_toRightOf="@id/ivProfileImage"
            android:layout_toEndOf="@id/ivProfileImage"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescription"
            android:layout_below="@+id/tvScreenName"
            android:layout_toRightOf="@id/ivProfileImage"
            android:layout_toEndOf="@id/ivProfileImage"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tvDescription"
            android:layout_marginTop="4dp"
            android:id="@+id/followCounts">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvFollowingCount"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:id="@+id/tvFollowing"
                android:textAllCaps="true"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvFollowersCount"
                android:textColor="@android:color/black"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:id="@+id/tvFollowers"
                android:textAllCaps="true"
                android:textSize="12sp"/>
        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#f1f1f1"
        android:layout_below="@id/followCounts"></View>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/userProfileHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/userTimelineContainer"></FrameLayout>
</LinearLayout>
